--- a/KMeansClustering/KMeansClustering/KMeansClustering.csproj
+++ b/KMeansClustering/KMeansClustering/KMeansClustering.csproj
@@ -55,11 +55,15 @@
     </ApplicationDefinition>
     <Compile Include="DataController.cs" />
     <Compile Include="DBSCAN.cs" />
+    <Compile Include="EuclideanDistance.cs" />
     <Compile Include="Forel.cs" />
+    <Compile Include="IDistanceMeasure.cs" />
     <Compile Include="Main.xaml.cs">
       <DependentUpon>Main.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ManhattanDistance.cs" />
     <Compile Include="Point.cs" />
+    <Compile Include="SquareEuclideanDistance.cs" />
     <Compile Include="VisualizationController.cs" />
     <Page Include="Main.xaml">
       <SubType>Designer</SubType>
