--- a/KMeansClustering/KMeansClustering/KMeansClustering.csproj
+++ b/KMeansClustering/KMeansClustering/KMeansClustering.csproj
@@ -53,6 +53,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Algs\ManualParallelKmeans.cs" />
     <Compile Include="Algs\ParallelKMeans.cs" />
     <Compile Include="Data\DataController.cs" />
     <Compile Include="Algs\DBSCAN.cs" />
