--- a/KMeansClustering/KMeansClustering/KMeansClustering.csproj
+++ b/KMeansClustering/KMeansClustering/KMeansClustering.csproj
@@ -53,6 +53,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Algs\KMeans.cs" />
     <Compile Include="Algs\ManualParallelKmeans.cs" />
     <Compile Include="Algs\ParallelKMeans.cs" />
     <Compile Include="Data\DataController.cs" />
@@ -76,7 +77,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Algs\ClusteringManager.cs" />
+    <Compile Include="Algs\SequentialKmeans.cs" />
     <Compile Include="Data\DataItem.cs" />
   </ItemGroup>
   <ItemGroup>
